# EDR_vis

./: .buildinfo  .gitignore  about Maria Mielniczuk.html  edr_pp_viz.html  edr_pp_viz.ipynb  genindex.html  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  pyproject.toml  search.html  searchindex.js
_sources/: about Maria Mielniczuk.md  edr_pp_viz.ipynb  intro.md
myfirstbook/: _config.yml  _toc.yml  about Maria Mielniczuk.md  edr_pp_viz.ipynb
myfirstbook/_build/.doctrees/: about Maria Mielniczuk.doctree  edr_pp_viz.doctree  environment.pickle  intro.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree
myfirstbook/_build/html/: .buildinfo  about Maria Mielniczuk.html  edr_pp_viz.html  genindex.html  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  search.html  searchindex.js
myfirstbook/_build/html/_sources/: about Maria Mielniczuk.md  edr_pp_viz.ipynb  intro.md
myfirstbook/_build/jupyter_execute/: edr_pp_viz.ipynb  markdown-notebooks.ipynb
