[tool.poetry]
name = "edr-vis"
version = "0.1.0"
description = ""
authors = ["Maria Silvia Mielniczuk <150165660+MS-Mielnic@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter-book = "^0.15.1"
ipykernel = "^6.28.0"
pandas = "^2.1.4"
polars = "^0.20.2"
altair = "^5.2.0"
plotly = "^5.18.0"
ghp-import = "^2.1.0"
vega-datasets = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
